# slam-module

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  justfile  west.yml
app/: CMakeLists.txt  prj.conf
app/boards/: esp32s3_devkitc.overlay
app/include/: hardware_intf.h  imu.h  lidar.h  slam.h  uart_comm.h  wifi_comm.h
app/src/: hardware_intf.c  imu.c  lidar.c  main.c  main.txt  slam.c  wifi_comm.c
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/lidar_lite_v4/: CMakeLists.txt  Kconfig  lidar_lite_v4.c  lidar_lite_v4.h
dts/bindings/sensor/: garmin,lidar-lite-v4.yaml
lib/: CMakeLists.txt
scripts/: setup.sh
scripts/vscode/: c_cpp_properties.json  settings.json
